# eth-tx-pipeline

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
docs/: architecture.md  message-schema.md
scripts/: e2e_smoke.sh
services/db-indexing-sidecar/: Dockerfile
services/db-indexing-sidecar/src/: main.py
services/db-indexing-sidecar/tests/: test_main.py
services/endpoint-server/: Dockerfile  requirements.txt
services/endpoint-server/src/: main.py
services/endpoint-server/tests/: test_main.py
services/message-consumer/: Dockerfile  requirements.txt
services/message-consumer/src/: main.py
services/message-consumer/tests/: test_main.py
services/transactions-historical/: Dockerfile
services/transactions-historical/src/: main.py
services/transactions-historical/tests/: test_main.py
services/transactions-historical/tests/fixtures/: etherscan_txlist.json
services/transactions-realtime/: Dockerfile  requirements.txt
services/transactions-realtime/src/: main.py
services/transactions-realtime/tests/: test_main.py
shared/: pyproject.toml
shared/eth_tx_shared/: __init__.py  schema.py
shared/tests/: test_schema.py
