[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eth-tx-shared"
version = "0.1.0"
description = "Shared message/document schema for the eth-tx-pipeline services"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
include = ["eth_tx_shared*"]
